--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,5 +4,19 @@ michael:
   name: Michael Example
   email: michael@example.com
   password_digest: <%= User.digest('password') %>
+  admin: true
+
+archer:
+  name: Sterling Archer
+  email: duchess@example.dev
+  password_digest: <%= User.digest('password') %>
+
+
+<% 30.times do |n| %>
+user-<%= n %>:
+  name:  <%= "User #{n}" %>
+  email: <%= "User-#{n}@example.com" %>
+  password_digest: <% User.digest('password') %>
+<% end %>
 
   
